--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,8 @@
     <string name="generic_error">网络异常,请稍后再试~!</string>
     <string name="process_data_exception_try">数据处理异常,请重试!</string>
     <string name="homepage">首页</string>
-    <string name="category">分类</string>
-    <string name="shopping">购物车</string>
+    <string name="enroll">招生</string>
+    <string name="community">社区</string>
     <string name="personal">我的</string>
+    <string name="search">搜索</string>
 </resources>
