增加注册页和个人设置页

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ZCProject</string>
+    <string name="app_name">老同学</string>
 
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
